crates/crunchy-syntax/tests/snapshots/corpus__corpus@bom.mcnp.snap
---
source: crates/crunchy-syntax/tests/corpus.rs
expression: summary(&src)
input_file: crates/crunchy-syntax/tests/corpus/bom.mcnp
---
TITLE_CARD   | Deck with a UTF-8 BOM before the title
CELL_CARD    | 1 0 -1
CELL_CARD    | 2 0 1
SURFACE_CARD | 1 SO 5
DATA_CARD    | m1 1001 1
--
diagnostics: none
